# GeneStudio

./: .gitignore  CORE_UTILITIES_REFERENCE.md  ENHANCEMENT_SUMMARY.md  ENTERPRISE_SUMMARY.md  README.md  README_ENHANCED.md  USER_GUIDE.md  UX_COMPONENTS_REFERENCE.md  demo_enhanced_features.py  main.py  main_pro.py  pyproject.toml  requirements.txt  test_async_fix.py  test_enhanced_gui.py  test_fixes.py
.kiro/specs/advanced-analysis-visualization/: design.md  requirements.md  tasks.md
.kiro/specs/foundation-core-integration/: design.md  requirements.md  tasks.md
.kiro/steering/: APPLICATION_STATE_MANAGEMENT.md  PYPIKA_USAGE.md  implementation.md  product.md  structure.md  tech.md  ux-patterns.md
algorithms/: __init__.py  approximate_match.py  boyer_moore.py  fasta_reader.py  overlap_graph.py  sequence_ops.py  suffix_array.py  translation.py
data/: genestudio.db  sample.fasta
database/: __init__.py  db_manager.py
docs/: IMPLEMENTATION_PLAN.md  QUICK_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  UX_COMPONENTS_REFERENCE.md
models/: __init__.py  analysis_model.py  project_model.py  sequence_model.py  sequence_model_enhanced.py  settings_model.py
repositories/: __init__.py  analysis_repository.py  base_repository.py  project_repository.py  sequence_repository.py  settings_repository.py
services/: __init__.py  analysis_service.py  base_service.py  project_service.py  sequence_service.py  settings_service.py
tests/: test_algorithms.py
utils/: __init__.py  async_executor.py  error_handling.py  integration_tester.py  logger.py  network_handler.py  platform_dirs.py  resource_manager.py  theme_manager.py  themed_components.py  themed_tooltips.py  validators.py  window_state_manager.py
viewmodels/: __init__.py  analysis_viewmodel.py  base_viewmodel.py  dashboard_viewmodel.py  main_viewmodel.py  project_viewmodel.py  workspace_viewmodel.py
views/: __init__.py  enhanced_main_window.py  main_window.py  page_manager.py
views/components/: __init__.py  buttons.py  cards.py  charts.py  confirmation_dialog.py  empty_states.py  error_boundary.py  font_settings_panel.py  footer.py  header.py  loading_indicators.py  modals.py  navigation.py  plots.py  skeleton_loader.py  splash_screen.py  tables.py  toast_notifications.py  visualization_3d.py  visualization_panel.py
views/pages/: __init__.py  analysis_page.py  dashboard_page.py  export_page.py  graph_analysis_page.py  help_page.py  pattern_matching_page.py  projects_page.py  reports_page.py  sequence_management_page.py  settings_page.py  visualization_page.py  workspace_page.py
